deployments/kubernetes/entrypoint/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicon-ingress
  namespace: musicon
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    # https://stackoverflow.com/questions/53592545/increase-proxy-send-timeout-and-proxy-read-timeout-ingress-nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "7200"


spec:
  tls:
  - hosts:
    - backend.musicon.space
    secretName: musicon-tls
  ingressClassName: nginx
  rules:
  - host: backend.musicon.space
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: entrypoint
            port:
              number: 8080
